# ckni-search

./: README.md  models.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ckni_search/: __init__.py  client.py  cnki_search.py  config.py  main.py  parser.py  search.py  translator.py
