[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytocnki"
version = "0.1.0"
description = "Phytochemical pathway mining from CNKI with translation support"
authors = [
    { name="Your Team", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "pandas",
    "googletrans==4.0.0-rc1"
]

[tool.setuptools.packages.find]
where = ["src"]
