[metadata]
name = ckni-search
version = 0.1.0
description = CNKI search pipeline for phytochemicals with translation support
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/ckni-search
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    googletrans==4.0.0-rc1
    pandas>=1.5
    requests>=2.28

[options.packages.find]
where = src
